--- a/index.html
+++ b/index.html
@@ -4,21 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <link rel="stylesheet" href="./css/syles.css" />
   </head>
   <body>
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+          <li><a href="#studio" class="link-nav">Studio</a></li>
+          <li><a href="#portfolio" class="link-nav">Portfolio</a></li>
+          <li><a href="#contacts" class="link-nav">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="link-adr"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="link-adr">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
@@ -26,10 +43,10 @@
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="button">Order Service</button>
       </section>
 
-      <section>
+      <section class="goals">
         <h2>Our Goals</h2>
         <ul>
           <li>
@@ -63,10 +80,10 @@
         </ul>
       </section>
 
-      <section>
+      <section class="team-section">
         <h2>Our Team</h2>
         <ul>
-          <li>
+          <li class="mark">
             <img
               src="./images/img.jpg"
               alt="Mark Guererro Product Designer"
@@ -76,7 +93,7 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="tom">
             <img
               src="./images/img-2.jpg"
               alt="Tom Ford Frontend Developer"
@@ -86,7 +103,7 @@
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="camila">
             <img
               src="./images/img-3.jpg"
               alt="Camila Garcia Marketing"
@@ -96,7 +113,7 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="daniel">
             <img
               src="./images/img-4.jpg"
               alt="Daniel Wilson UI Designer"
@@ -108,8 +125,74 @@
           </li>
         </ul>
       </section>
+
+      <section class="portfolio">
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/banking.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashless.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditation.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/taxi.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screen.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/online.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
