--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap"
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,7 +25,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"
+          >Web<span class="studio">Studio</span></a
+        >
         <ul>
           <li><a href="#studio" class="link-nav">Studio</a></li>
           <li><a href="#portfolio" class="link-nav">Portfolio</a></li>
