--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           >Web<span class="studio">Studio</span></a
         >
         <ul>
-          <li><a href="#studio" class="link-nav">Studio</a></li>
-          <li><a href="#portfolio" class="link-nav">Portfolio</a></li>
-          <li><a href="#contacts" class="link-nav">Contacts</a></li>
+          <li><a href="./index.html" class="link-nav">Studio</a></li>
+          <li><a href="" class="link-nav">Portfolio</a></li>
+          <li><a href="" class="link-nav">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="adress">
         <ul>
           <li>
             <a href="mailto:info@devstudio.com" class="link-adr"
