banner section update

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="banner">
+        <h1 class="first-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
 
