second section update

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <h2>Our Goals</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="goals-title">Strategy</h3>
+            <p class="goals-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
