--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="goals-title">Punctuality</h3>
+            <p class="goals-text"></p>>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="goals-title">Diligence</h3>
+            <p class="goals-text"></p>>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="goals-title">Technologies</h3>
+            <p class="goals-text"></p>>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -89,47 +89,47 @@
       </section>
 
       <section class="team-section">
-        <h2>Our Team</h2>
+        <h2 class="team-title">Our Team</h2>
         <ul>
-          <li class="mark">
+          <li class="crew-list">
             <img
               src="./images/img.jpg"
               alt="Mark Guererro Product Designer"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li class="tom">
+          <li class="crew-list">
             <img
               src="./images/img-2.jpg"
               alt="Tom Ford Frontend Developer"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-title">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li class="camila">
+          <li class="crew-list">
             <img
               src="./images/img-3.jpg"
               alt="Camila Garcia Marketing"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-title">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li class="daniel">
+          <li class="crew-list">
             <img
               src="./images/img-4.jpg"
               alt="Daniel Wilson UI Designer"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
