--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
           </li>
           <li>
             <h3 class="goals-title">Punctuality</h3>
-            <p class="goals-text"></p>>
+            <p class="goals-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="goals-title">Diligence</h3>
-            <p class="goals-text"></p>>
+            <p class="goals-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="goals-title">Technologies</h3>
-            <p class="goals-text"></p>>
+            <p class="goals-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -144,8 +144,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-title">Banking App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
