--- a/index.html
+++ b/index.html
@@ -201,8 +201,10 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="logo"
+        >Web<span class="studio">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
