--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </section>
 
       <section class="team-section">
-        <h2 class="team-title">Our Team</h2>
+        <h2 class="team-main-title">Our Team</h2>
         <ul>
           <li class="crew-list">
             <img
@@ -135,7 +135,7 @@
       </section>
 
       <section class="portfolio">
-        <h2>Our Portfolio</h2>
+        <h2 class="portfolio-main-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -154,8 +154,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
@@ -164,8 +164,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-title">Meditation App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
@@ -174,8 +174,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
@@ -184,8 +184,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-title">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
           </li>
           <li>
             <img
@@ -194,15 +194,15 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
       <a href="./index.html" class="logo"
-        >Web<span class="studio">Studio</span></a
+        >Web<span class="studio-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
